fix: wrap and break coupon code on order summary and coupon popup

--- a/public/scss/components/OrderSummary.module.scss
+++ b/public/scss/components/OrderSummary.module.scss
@@ -127,6 +127,8 @@
 {
   @extend .voucherButton;
   position: relative;
+  height: fit-content;
+  padding: 10px 16px;
 
   &[data-identity="ordersummary-points-btn"]
   {
@@ -168,8 +170,11 @@
   @extend .voucherText;
   @include RegulerSemiBold;
   @include truncate(1);
-  max-width: 60%;
+  max-width: 65%;
   color: $color_black;
+  display: block;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .registerNow
