--- a/public/scss/components/PopUpVoucherCoupon.module.scss
+++ b/public/scss/components/PopUpVoucherCoupon.module.scss
@@ -194,8 +194,8 @@
 
 .voucherDetailCode
 {
-  @include flex(row, center, flex-start);
   @include ExtraSmallReguler;
+  display: inline-block;
   color: $color_text_secondary;
   
   & > span
@@ -203,6 +203,7 @@
     @include SmallSmall;
     color: $color_blue;
     margin-left: 5px;
+    word-break: break-all;
 
     svg
     {
